--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,9 +6,9 @@
         <div class="left"></div>
         <div class="right">
           <h2>Contact Us</h2>
-          <input type="text" class="field" placeholder="Your Name">
-          <input type="text" class="field" placeholder="Your Email">
-          <input type="text" class="field" placeholder="Phone">
+          <input type="text" class="field" placeholder="Username">
+          <input type="text" class="field" placeholder="Email">
+          <input type="text" class="field" placeholder="Subject">
           <textarea placeholder="Message" class="field"></textarea>
           <button class="btn">Send</button>
         </div>
