--- a/myapp/static/css/base.css
+++ b/myapp/static/css/base.css
@@ -57,7 +57,7 @@ p {
 }
 
 .flex {
-    /Flexbox for containers/ display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -67,7 +67,8 @@ p {
     position: relative;
     width: 100%;
     height: 15vh;
-    margin-bottom: -7px;/Fix for safari gap/ min-height: 100px;
+    margin-bottom: -7px;
+    min-height: 100px;
     max-height: 150px;
 }
 
@@ -114,7 +115,7 @@ p {
     }
 }
 
-/Shrinking for mobile/ @media (max-width: 768px) {
+@media (max-width: 768px) {
     .waves {
         height: 40px;
         min-height: 40px;
