--- a/myapp/static/css/profile.css
+++ b/myapp/static/css/profile.css
@@ -1,63 +1,166 @@
-
-#edit {
-    width:100%;
-    height:100%;
+#edit{
     display: flex;
-    padding :40px;
+    align-items: center;
     justify-content: center;
+    padding: 50px;
+}
+*{
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+.containerp{
+    position: relative;
+    max-width: 900px;
+    width: 100%;
+    border-radius: 6px;
+    padding: 30px;
+    margin: 0 15px;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
+.containerp header{
+    position: relative;
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+}
+.containerp header::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    height: 3px;
+    width: 27px;
+    border-radius: 8px;
+    background-color: #f44040;
+}
+.containerp form{
+    position: relative;
+    margin-top: 16px;
+    min-height: 490px;
+    background-color: #fff;
+    overflow: hidden;
+}
+.containerp form .form{
+    position: absolute;
+    background-color: #fff;
+    transition: 0.3s ease;
+}
+.containerp form .form.second{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(100%);
+}
+form.secActive .form.second{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateX(0);
+}
+form.secActive .form.first{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(-100%);
+}
+.containerp form .title{
+    display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 6px 0;
+    color: #333;
+}
+.containerp form .fields{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+form .fields .input-field{
+    display: flex;
+    width: calc(100% / 3 - 15px);
+    flex-direction: column;
+    margin: 4px 0;
+}
+.input-field label{
+    font-size: 12px;
+    font-weight: bold;
+    color: #2e2e2e;
+}
+.input-field input, select{
+    outline: none;
+    font-size: 14px;
+    font-weight: 400;
+    color: #333;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 0 15px;
+    height: 42px;
+    margin: 8px 0;
+}
+.input-field input :focus,
+.input-field select:focus{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.13);
+}
+.input-field select,
+.input-field input[type="date"]{
+    color: #707070;
+}
+.input-field input[type="date"]:valid{
+    color: #333;
+}
+.containerp form button, .backBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    max-width: 200px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: #fff;
+    border-radius: 5px;
+    margin: 25px 0;
+    background-color: #f44040;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+.containerp form .btnText{
+    font-size: 14px;
+    font-weight: 400;
+}
+form button:hover{
+    background-color: #f22626;
+}
+form button i,
+form .backBtn i{
+    margin: 0 6px;
+}
+form .backBtn i{
+    transform: rotate(180deg);
+}
+form .buttons{
+    display: flex;
     align-items: center;
 }
-#div-label{
-    display: flex;
-    margin: 5px;
-    justify-content: space-evenly;
-    height: 100%;
-    flex-direction: column;
-    text-align: left;
-    width:25%;
-}
-#div-label > label{
-    text-align: bottom;
-    width:100px;
-    color:black;
-    height: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+form .buttons button , .backBtn{
+    margin-right: 14px;
 }
 
-#div-form {
-    border-radius: 20px;
-    border: 2px solid rgb(34, 34, 34);
-    backdrop-filter: blur(10px);
-    display: flex;
-    grid-template-columns: 1fr 1fr;
-    align-self: center;
-    width: 75%;
-    height: auto;
-    padding: 20px;
-    box-shadow: 10px 10px 40px 1px rgba(0, 0, 0, 0.6);
-    background-image: linear-gradient(130deg ,rgba(175, 175, 175, 0.706),white, rgba(175, 175, 175, 0.706));
+@media (max-width: 750px) {
+    .container form{
+        overflow-y: scroll;
+    }
+    .containerp form::-webkit-scrollbar{
+       display: none;
+    }
+    form .fields .input-field{
+        width: calc(100% / 2 - 15px);
+    }
 }
 
-
-#edit-form{
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-}
-
-#edit-form > input{
-    margin:2px;
-    min-height:25px;
-    width:100%;
-    /* box-shadow: 2px 2px 2px 1px rgba(255, 255, 255, 0.6); */
-    border-radius: 4px;
-    border: 1px solid rgba(71, 47, 47, 0.634);
-}
-#edit-form > input:focus{
-    border:  3px solid rgba(205, 64, 64, 0.634);
-    outline:none;
-     box-shadow: 1px 1px 10px 1px rgba(3, 3, 3, 0.657);
+@media (max-width: 550px) {
+    form .fields .input-field{
+        width:100%;
+    }
 }
